cambios de ortografia

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes buienvenidos a mi sitio web MDF - Mi twitter es @nnnnavarrete
+        Hola estudiantes bienvenidos a mi sitio web MDF - Mi twitter es @nnnnavarrete
     </p>
 </body>
 </html>
